<!--
  ~  Copyright (C) 2016 Sheshlok Samal
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~
  -->

<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_details_swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.MovieDetailsFragment"
    tools:showIn="@layout/activity_movie_details">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_movie_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
            android:id="@+id/observable_movie_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/movie_backdrop_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <com.example.android.popmovies.ui.widget.FixedAspectRatioImageView
                        android:id="@+id/movie_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop"
                        app:aspectRatio="@dimen/movie_background_cover_aspect_ratio"
                        app:aspectRatioEnabled="true"
                        tools:src="@drawable/placeholder_movie_backdrop_cover" />

                    <ImageView
                        android:id="@+id/backdrop_play_main_trailer"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:alpha="0.50"
                        android:contentDescription="@string/movie_details_play_main_trailer"
                        android:src="@drawable/ic_play_circle_filled_white_24dp"
                        android:visibility="gone"
                        tools:visibility="visible" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <com.example.android.popmovies.ui.widget.FixedAspectRatioImageView
                        android:id="@+id/movie_poster_image_thumbnail"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="-16dp"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop"
                        app:aspectRatio="@dimen/movie_image_aspect_ratio"
                        app:aspectRatioEnabled="true"
                        tools:src="@drawable/placeholder_movie_item_image" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/movie_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="Captain America: Civil War" />

                        <TextView
                            android:id="@+id/movie_release_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            tools:text="April 2016" />

                        <TextView
                            android:id="@+id/movie_rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:textSize="14sp"
                            tools:text="Rating: 3.7" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/movie_favorite_button"
                            style="@style/FavoriteButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|end"
                            android:contentDescription="@string/movie_item_button_desc"
                            android:tint="@color/colorAccent" />
                    </FrameLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/dividerColor" />

                <TextView
                    android:id="@+id/movie_plot_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="14sp"
                    tools:text="@string/placeholder_movie_synopsis" />

                <include layout="@layout/viewgroup_movie_reviews" />

                <include layout="@layout/viewgroup_movie_trailers" />

            </LinearLayout>

        </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

    </android.support.v7.widget.CardView>

</android.support.v4.widget.SwipeRefreshLayout>
